fixed album divs, veritcally aligned

--- a/beasley/styles.css
+++ b/beasley/styles.css
@@ -78,7 +78,6 @@
   }
 
   main {
-    display: flex;
     justify-content: center;
     margin-top: 200px;
   }
@@ -174,4 +173,16 @@
 
   #JCPic {
     border-radius: 5px;
+  }
+/* ----------------- */
+  .LamarAlbumContainer, .MillerAlbumContainer, .JColeAlbumContainer, .DrakeAlbumContainer{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin: 50px;
+  }
+
+  .KendrickAlbumSong, .MacAlbumSong, .DrakeAlbumSong, .JColeAlbumSong {
+    margin: 10px;
+    width: 300px;
   }
